[gd_scene load_steps=60 format=3 uid="uid://c48vecqypntbn"]

[ext_resource type="Script" path="res://escenes/Enemic2.gd" id="1_bcxid"]
[ext_resource type="Texture2D" uid="uid://r32o2rq4r3q0" path="res://Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Guard/Spritesheets/Guard Attack.png" id="1_hymxn"]
[ext_resource type="Texture2D" uid="uid://dnm5mvitgp5hj" path="res://Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Guard/Spritesheets/Guard Death.png" id="2_12klw"]
[ext_resource type="Texture2D" uid="uid://kqdk326d3qxy" path="res://Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Guard/Spritesheets/Guard Hurt.png" id="3_5cpbr"]
[ext_resource type="Texture2D" uid="uid://ki11ri3an7ix" path="res://Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Guard/Spritesheets/Guard Idle.png" id="4_faob6"]
[ext_resource type="Texture2D" uid="uid://d77aihvtm61y" path="res://Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Guard/Spritesheets/Guard Jump.png" id="5_woo1t"]
[ext_resource type="Texture2D" uid="uid://bqyiona3o6d5v" path="res://Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Foozle_2DC0023_Critters_EnemyPack1_Pixel_Art/Guard/Spritesheets/Guard Run.png" id="6_ietcf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lwwfp"]
atlas = ExtResource("1_hymxn")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_43nsh"]
atlas = ExtResource("1_hymxn")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6ist"]
atlas = ExtResource("1_hymxn")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lh6w4"]
atlas = ExtResource("1_hymxn")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlmjn"]
atlas = ExtResource("1_hymxn")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1mkt"]
atlas = ExtResource("1_hymxn")
region = Rect2(320, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_65tcv"]
atlas = ExtResource("1_hymxn")
region = Rect2(384, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpn7r"]
atlas = ExtResource("1_hymxn")
region = Rect2(448, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_867v1"]
atlas = ExtResource("2_12klw")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdtdp"]
atlas = ExtResource("2_12klw")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b1yl"]
atlas = ExtResource("2_12klw")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2brgo"]
atlas = ExtResource("2_12klw")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxmyw"]
atlas = ExtResource("2_12klw")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_55fck"]
atlas = ExtResource("2_12klw")
region = Rect2(320, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpri1"]
atlas = ExtResource("2_12klw")
region = Rect2(384, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iav6w"]
atlas = ExtResource("2_12klw")
region = Rect2(448, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gjxm"]
atlas = ExtResource("2_12klw")
region = Rect2(512, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt1m6"]
atlas = ExtResource("2_12klw")
region = Rect2(576, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bobc"]
atlas = ExtResource("2_12klw")
region = Rect2(640, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qmp2"]
atlas = ExtResource("2_12klw")
region = Rect2(704, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjd5b"]
atlas = ExtResource("2_12klw")
region = Rect2(768, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlabm"]
atlas = ExtResource("2_12klw")
region = Rect2(832, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_641u7"]
atlas = ExtResource("2_12klw")
region = Rect2(896, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_csrvo"]
atlas = ExtResource("3_5cpbr")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwldo"]
atlas = ExtResource("3_5cpbr")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi8tt"]
atlas = ExtResource("3_5cpbr")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dk7i"]
atlas = ExtResource("3_5cpbr")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j6xe"]
atlas = ExtResource("4_faob6")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhmyt"]
atlas = ExtResource("4_faob6")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbcdh"]
atlas = ExtResource("4_faob6")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0d06"]
atlas = ExtResource("4_faob6")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayojs"]
atlas = ExtResource("4_faob6")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_swnnn"]
atlas = ExtResource("4_faob6")
region = Rect2(320, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wtb1"]
atlas = ExtResource("5_woo1t")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xet7"]
atlas = ExtResource("5_woo1t")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1sfq"]
atlas = ExtResource("5_woo1t")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6xj0"]
atlas = ExtResource("5_woo1t")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd6y5"]
atlas = ExtResource("5_woo1t")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yv5f"]
atlas = ExtResource("5_woo1t")
region = Rect2(320, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_movoq"]
atlas = ExtResource("5_woo1t")
region = Rect2(384, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0mby"]
atlas = ExtResource("6_ietcf")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kednj"]
atlas = ExtResource("6_ietcf")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_76iyt"]
atlas = ExtResource("6_ietcf")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_15j6u"]
atlas = ExtResource("6_ietcf")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6tsm"]
atlas = ExtResource("6_ietcf")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_goc4l"]
atlas = ExtResource("6_ietcf")
region = Rect2(320, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vidjr"]
atlas = ExtResource("6_ietcf")
region = Rect2(384, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_11s0d"]
atlas = ExtResource("6_ietcf")
region = Rect2(448, 0, 64, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_xl518"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwwfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43nsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6ist")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lh6w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlmjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1mkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65tcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpn7r")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_867v1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdtdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b1yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2brgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxmyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55fck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpri1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iav6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gjxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt1m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bobc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qmp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjd5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlabm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_641u7")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_csrvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwldo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi8tt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dk7i")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j6xe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhmyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbcdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0d06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayojs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swnnn")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wtb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xet7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1sfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6xj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd6y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yv5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_movoq")
}],
"loop": true,
"name": &"jump",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0mby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kednj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76iyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15j6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6tsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_goc4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vidjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11s0d")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iujrh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y1r6a"]
radius = 112.502

[sub_resource type="CircleShape2D" id="CircleShape2D_kyukc"]
radius = 39.0712

[node name="Enemic2" type="CharacterBody2D"]
position = Vector2(-0.515747, 4.35315)
scale = Vector2(0.8, 0.8)
script = ExtResource("1_bcxid")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-1, -22)
sprite_frames = SubResource("SpriteFrames_xl518")
animation = &"idle"
frame = 2
frame_progress = 0.736669

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_iujrh")

[node name="areapersecucio" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areapersecucio"]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_y1r6a")

[node name="areaatac" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaatac"]
position = Vector2(2.5, -13.75)
shape = SubResource("CircleShape2D_kyukc")

[connection signal="body_entered" from="areapersecucio" to="." method="_on_areapersecucio_body_entered"]
[connection signal="body_exited" from="areapersecucio" to="." method="_on_areapersecucio_body_exited"]
[connection signal="body_entered" from="areaatac" to="." method="_on_areaatac_body_entered"]
[connection signal="body_exited" from="areaatac" to="." method="_on_areaatac_body_exited"]
